# scuff

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt
client/cmake/: scuff-client-config.cmake.in
client/include/scuff/: client.h  client.hpp  device-state.hpp  device.hpp  device_state.hpp  managed.hpp
client/src/: client.cpp  data.hpp  report-types.hpp  report.hpp  scan.hpp  ui-types.hpp  ui.hpp
client/test/: CMakeLists.txt
client/test/src/: main.cpp
common/: CMakeLists.txt  audio_sync.hpp  c_constants.h  c_events.h  c_plugin_type.h  c_render_mode.h  c_string_options.h  events.hpp  messages.hpp  os.hpp  render_mode.hpp  request.hpp  shm.hpp  slot_buffer.hpp  types.hpp  util.cmake
common/cmake/: scuff-common-headers-config.cmake.in
common/include/: common-audio-sync.hpp  common-clap.hpp  common-colors.hpp  common-constants.hpp  common-device-info.hpp  common-event-buffer.hpp  common-events-clap.hpp  common-events.hpp  common-ipc-event.hpp  common-message-send-rcv.hpp  common-messages.hpp  common-os-child-proc.hpp  common-os-dso.hpp  common-os.hpp  common-param-info.hpp  common-render-mode.hpp  common-serialize-events.hpp  common-serialize-messages.hpp  common-serialize-param-info.hpp  common-serialize.hpp  common-shm.hpp  common-signaling.hpp  common-slot-buffer.hpp  common-visit.hpp  jthread.hpp
common/include/common/: audio_sync.hpp  c_constants.h  c_events.h  c_plugin_type.h  c_render_mode.h  c_types.h  clap.hpp  constants.hpp  event_buffer.hpp  events.hpp  events_clap.hpp  messages.hpp  os.hpp  param_info.h  param_info.hpp  plugin_type.h  plugin_type.hpp  serialize.hpp  serialize_events.hpp  shm.hpp  signaling.hpp  speen.hpp  types.hpp  util.hpp
common/src/: common-os-lin.cpp  common-os-mac.cpp  common-os-mac.mm  common-os-win.cpp  os-lin.cpp  os-mac.mm  os-win.cpp
dope/: deps.yml
sbox/: CMakeLists.txt
sbox/cmake/: scuff-sbox-config.cmake.in
sbox/res/: clap-icon-256.tga
sbox/src/: app.hpp  audio.hpp  clap-data.hpp  clap.hpp  clap_data.hpp  cmdline.hpp  data.hpp  debug-ui.hpp  debug_ui.hpp  device.cpp  device.hpp  dll.hpp  gui.hpp  log.hpp  loguru.cpp  loguru.hpp  main.cpp  msg-proc.hpp  op.hpp  options.hpp  os-lin-gtk.cpp  os-lin.cpp  os-mac.mm  os-win.cpp  os.hpp  plugfile.cpp  plugfile.hpp  shm.cpp  shm.hpp  window-size.hpp  window-win.cpp  window.hpp
scan/: CMakeLists.txt
scan/cmake/: scuff-scan-config.cmake.in
scan/src/: constants.hpp  main.cpp  os-lin.cpp  os-win.cpp  util.hpp
scanner/: CMakeLists.txt
scanner/src/: main.cpp  os-lin.cpp  os-mac.mm  os-win.cpp  os.cpp  os.hpp  util.cpp
test-host/: CMakeLists.txt
test-host/src/: main.cpp
