cmake_minimum_required(VERSION 3.30)
project(scuff)

set(SCUFF_BUILD_CLIENT  ON CACHE BOOL "Build the client library")
set(SCUFF_BUILD_SBOX    ON CACHE BOOL "Build the sandbox exe")
set(SCUFF_BUILD_SCANNER ON CACHE BOOL "Build the scanner exe")

if (SCUFF_BUILD_CLIENT)
	add_subdirectory(client)
endif()
if (SCUFF_BUILD_SBOX)
	add_subdirectory(sbox)
endif()
if (SCUFF_BUILD_SCANNER)
	add_subdirectory(scan)
endif()
