cmake_minimum_required(VERSION 3.30)
project(scuff)

set(SCUFF_BUILD_CLIENT  ON CACHE BOOL "Build the client library")
set(SCUFF_BUILD_SBOX    ON CACHE BOOL "Build the sandbox exe")
set(SCUFF_BUILD_SCANNER ON CACHE BOOL "Build the scanner exe")

if (SCUFF_BUILD_CLIENT AND NOT TARGET scuff::client)
	add_subdirectory(client)
endif()
if (SCUFF_BUILD_SBOX AND NOT TARGET scuff::sbox)
	add_subdirectory(sbox)
endif()
if (SCUFF_BUILD_SCANNER AND NOT TARGET scuff::scan)
	add_subdirectory(scan)
endif()
